--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+apt-p2p (0.1.2) unstable; urgency=low
+
+  * Fixed a bug in the HTTP downloader that caused errors with some
+    mirrors that always close the connections (Closes: #479455)
+
+ -- Cameron Dale <camrdale@gmail.com>  Sun, 04 May 2008 22:32:11 -0700
+
 apt-p2p (0.1.1) unstable; urgency=low
 
   * Fix: no files were added to the DHT due to missing hashing results.
