--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,23 @@
+apt-p2p (0.1.3) unstable; urgency=low
+
+  * Speed up downloading from peers
+    - Set a new peer's ranking values so they don't get an unfair
+      advantage.
+    - Reduce the HTTP connection timeout to 10s.
+    - Drop peers after a limited number of errors.
+  * Speed up the DHT requests when nodes fail
+    - Schedule a re-ping message after adding a new node.
+    - When a node fails, schedule a future ping to check again.
+    - Send periodic finds to nodes that are stale.
+    - Increase the stored value redundancy to 6.
+    - Increase the concurrency of DHT requests to 8.
+    - Add early termination and ignoring slow responses to
+      recursive DHT actions when timeouts occur.
+  * Remove the debconf note about port forwarding (Closes: #479492)
+    - Add a NEWS entry for port forwarding
+
+ -- Cameron Dale <camrdale@gmail.com>  Fri, 09 May 2008 23:43:13 -0700
+
 apt-p2p (0.1.2) unstable; urgency=low
 
   * Fixed a bug in the HTTP downloader that caused errors with some
