--- a/docs/abstract/all.bib
+++ b/docs/abstract/all.bib
@@ -221,7 +221,7 @@
 @article{kademlia,
 	title = {{Kademlia: A Peer-to-Peer Information System Based on the XOR Metric}},
 	author = {P. Maymounkov and D. Mazieres},
-	journal = {Peer-To-Peer Systems: First International Workshop, IPTPS 2002, Cambridge, MA, USA, March 7-8, 2002},
+	journal = {Peer-To-Peer Systems: First International Workshop, IPTPS 2002, Cambridge, MA, USA, March 7-8},
 	publisher = {Springer},
 	year = 2002,
 	entrytype = {article},
