--- a/docs/paper/paper.tex
+++ b/docs/paper/paper.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 
-\title{Peer-to-Peer Distribution of Free Software Packages}
+\title{\texttt{apt-p2p}: A Peer-to-Peer Distributor for Free Software Package Release and Update}
 \author{\IEEEauthorblockN{Cameron Dale}
 \IEEEauthorblockA{School of Computing Science\\
 Simon Fraser University\\
@@ -88,32 +88,28 @@ distribution system. This implementation will be used by a large
 number of users, and serves as an example for other free software
 distributors of the opportunity that can be met with such a system.
 
-This paper is organized as follows. The current situation and its
-problems are presented in section \ref{situation}. We analyze some
-related solutions in section \ref{related}, and then present our
-solution in section \ref{opportunity}. We then detail our sample
-implementation for Debian-based distributions in section
+The rest of this paper is organized as follows. The background and motivation are presented in Section \ref{situation}, together with related works in  Section \ref{related}. We propose
+our solution in Section \ref{opportunity}. We then detail our sample
+implementation for Debian-based distributions in Section
 \ref{implementation}, including an in-depth look at our DHT
-customizations in section \ref{custom_dht}. We analyze our deployed
-sample implementation in section \ref{analysis}, suggest some future
-enhancements in section \ref{future}, and conclude the paper in
-section \ref{conclusions}.
+customizations in Section \ref{custom_dht}. Its performance is evaluated in Section \ref{analysis}. Finally, 
+Section \ref{conclusions} concludes the paper and offers some future directions.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Problem/Situation}
+\section{Background and Motivations}
 \label{situation}
 
-There are a large number of groups using the Internet to distribute
-their free software packages. These packages are usually available
-from a free download site, which usually requires a network of
-mirrors to support the large number of requests. These distribution
-systems almost always support some kind of file verification,
-usually cryptographic hashes, to verify the completed downloads
-accuracy or authenticity.
+In the free software society, there are a large number of groups using the Internet to 
+collaboratively develop and release their software. The ever increasing power of
+modern programming languages and operating systems has made these software, like commercial software, extremely large and complex, which often
+consists of many small units (packages). Together with their popularity among users, 
+an efficient and reliable management and distribution of these packages over the Internet has become an daunting task. In this section, we offer concrete examples illustrating the 
+unique challenges in this context. 
 
-\subsection{Examples}
+\subsection{Free Software Package Distributor: Examples}
 \label{examples}
+
 
 Most Linux distributions use a software package management system
 that fetches packages to be installed from an archive of packages
@@ -137,7 +133,7 @@ manager is called \texttt{portage}, SlackWare Linux uses
 \texttt{pkgtools}, and FreeBSD has a suite of command-line tools,
 all of which download these tarballs from web servers.
 
-Other software distributors also use a similar system. CPAN
+Similar tools have been used for other software packages. CPAN
 distributes software packages for the PERL
 programming language, using SOAP RPC requests to find and download
 files. Cygwin provides many of the
@@ -146,84 +142,42 @@ package management tool that requests packages from websites. There
 are two software distribution systems for Mac OSX, fink and
 MacPorts, that also retrieve packages in this way.
 
-Also, some systems use direct web downloads, but with a hash
-verification file also available for download next to the desired
-file. These hash files usually have the same file name, but with an
+Direct web downloading is also a common way, often coupled with a hash
+verification file to be downloaded next to the desired
+file. The hash file usually have the same file name, but with an
 added extension identifying the hash used (e.g. \texttt{.md5} for
 the MD5 hash). This type of file downloading and verification is
 typical of free software hosting facilities that are open to anyone
 to use, such as SourceForge.
 
-\subsection{Similarities}
-\label{similarities}
 
-The important things to note for each of the systems mentioned in
-section \ref{examples}, is that they all have the following in
-common:
-\begin{itemize}
- \item The content is divided into distinct units (packages), each
-       of which contains a small independent part of all the
-       content.
- \item The packages are avaliable for anyone to freely download.
- \item Users are typically not interested in downloading all of the
-       packages available.
- \item Hashes of the packages are available before the download is
-       attempted.
- \item Requests to download the packages are sent by a tool, not
-       directly by the user (though the tool is responding to
-       requests from the user).
-\end{itemize}
-
-We also expect that there are a number of users of these systems
-that are motivated by altruism to want to help out with this
-distribution. This is common in these systems due to the free nature
-of the software being delivered, which encourages some to want to
-help out in some way. A number of the systems are also used by
+Given the free nature of these software, there are often a number of users 
+motivated by altruism to want to help out with their distribution. 
+This is particularly true considering that many of these software are used by
 groups that are staffed mostly, or sometimes completely, by
-volunteers. This also encourages users to want to give back
-to the volunteer community that has created the software they are
-using.
+volunteers. They are thus motivated to contribute their network resources, so as to promote the healthy development 
+of the volunteer community that released the software. As a matter of fact,
+we have see many free mirror sites hosting these software packages for downloading. 
+We also naturally expect that peer-to-peer distribution can be implementation in 
+this context, which scale well with large user bases and can easily explore the network resources made available by
+the volunteers. 
 
-\subsection{Differences}
-\label{differences}
 
-Although at first it might seem that a single all-reaching solution
-is possible for this situation, there are some differences in each
-system that require independent solutions. The systems all use
-different tools for their distribution, so any implementation would
-have to be specific to the tool it is to integrate with. In
-particular, how to obtain requests from the tool or user, and how to
-find a hash that corresponds to the file being requested, is very
-specific to each system.
 
-Also, there may be no benefit in creating a single large solution to
-integrate all these problems. Although they sometimes distribute
-nearly identical packages (e.g. the same software available in
-multiple Linux distributions), it is not exactly identical and has
-usually been tailored to the system by the distributor. The small
-differences will change the hash of the files, and so will make it
-impossible to distribute similar packages across systems. And,
-although peer-to-peer systems can scale very well with the number of
-peers in the system, there is some overhead involved, so having a
-much larger system of peers would mean that requests could take
-longer to complete.
-
-\subsection{Problems}
+\subsection{Unique Characteristics}
 \label{problems}
 
-There are some attributes of software package distribution that make
-it difficult to use an existing peer-to-peer solution with, or to
-design a new solution for this need.
+While it seems straightforward to use an existing peer-to-peer file sharing tool like BitTorrent for
+free software package distribution, there are indeed a series of new challenges in this unique scenario:
 
 \subsubsection{Archive Dimensions}
 
-The dimensions of the software archive makes it difficult to
-distribute efficiently. While most of the packages are very small in
+While most of the packages of a software release are very small in
 size, there are some that are quite large. There are too many
 packages to distribute each individually, but the archive is also
 too large to distribute in its entirety. In some archives there are
-also divisions of the archive into sections, e.g. by the computer
-architecture that the package is intended for. 
+also divisions of the archive into sections, e.g. by the operating system (OS) or computer
+architecture that the package is intended for.
 
 \begin{figure}
 \centering
@@ -234,20 +188,19 @@ the package.}
 \label{size_CDF}
 \end{figure}
 
-For example, Figure~\ref{size_CDF} shows the size of packages in the
-Debian distribution. While 80\% of the packages are less than
+For example, Figure~\ref{size_CDF} shows the size of the packages in the
+current Debian distribution. While 80\% of the packages are less than
 512~KB, some of the packages are hundreds of megabytes. The entire
 archive consists of 22,298 packages and is approximately 119,000 MB
-in size. Some packages are divided by architecture, but there are a
-large number of packages that are not architecture specific and so
-can be installed on any computer architecture.
+in size. Most of the packages are to be installed in any computer environment, but there are 
+also OS- or architecture-specific packages, as shown by the adjusted sizes based on popularity of the packages. ((((more words on how the size is adjusted by popularity))))
 
 \subsubsection{Package Updates}
 
 The software packages being distributed are being constantly
 updated. These updates could be the result of the software creators
-releasing a new version of the software with improved functionality,
-or the result of the distributor updating their packaging of the
+releasing a new version with improved functionality,
+or the distributor updating their packaging of the
 software to meet new requirements. Even if the distributor
 periodically makes \emph{stable} releases, which are snapshots of
 all the packages in the archive at a certain time, updates are still
@@ -263,17 +216,18 @@ each day, broken down by architecture.}
 
 For example, Figure~\ref{update_size} shows the amount of data in
 the Debian archive that was updated each day over a period of 3
-months. Each day approximately 1.5\% of the 119,000 MB archive is
-updated with new versions of packages.
+months. In every single day, approximately 1.5\% of the 119,000 MB archive is
+updated with new versions of packages. Note that this frequency is much higher than
+that of most commercial software, mainly because many free software are
+developed in a loosely management environment with developers working
+asynchronously from worldwide. 
 
 \subsubsection{Limited Interest}
 
-Though there are a large number of packages, and a large number of
-users, interest in a given version of a package could be very
-limited. If the package is necessary for the system (e.g. the
-package distribution software), then it is likely that everyone will
-have it installed, but there are very few of these packages. Most
-packages fall in the category of optional or extra, and so are
+Finally, though there are a large number of packages and a large number of
+users, the interest in a particular version of a package can be very 
+limited. Specifically, there are core packages that every user has to download, but most
+packages would fall in the category of optional or extra, and so are
 interesting to only a limited number of people.
 
 \begin{figure}
@@ -290,92 +244,56 @@ users who install each package. Though some packages are installed
 by everyone, 80\% of the packages are installed by less than 1\% of
 users.
 
-\subsubsection{Interactive Users}
-
-The package management software that downloads packages displays
-some kind of indication of speed and completeness for users to
-watch. Since previous client-server downloads occur in a sequential
-fashion, the package management software also measures the speed
-based on sequential downloading. This requires the peer-to-peer
-solution to be reasonably responsive at retrieving packages
-sequentially.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Related Work/Existing Solutions}
+\subsection{Why BitTorrent Doesn't Work Well}
 \label{related}
 
-There are many peer-to-peer implementations available today, but
-none is very well suited to this specific problem.
-
-\subsection{BitTorrent}
-\label{bittorrent}
-
-Many distributors make their software available in some form using
-BitTorrent \cite{COHEN03}, e.g. for the distribution of CD
-images. This is not an ideal situation though, as it requires the
+Recently, many distributors make their software available using
+BitTorrent \cite{COHEN03}, in particular, for the distribution of CD
+images. This straightforward use however is far ineffective, as it requires the
 peers to download large numbers of packages that they are not
 interested in, and prevents them from updating to new packages
 without downloading another image containing a lot of the same
-packages they already have. Unfortunately, BitTorrent is not ideally
-suited to an application such as this one.
+packages they already have. 
+
+An alternative is to create torrents tracking individual packages. Unfortunately, we find that this enhancement can be
+quite difficult given the unique characteristic of free software packages. 
 
 First, there is no obvious way to divide the packages into torrents.
 Most of the packages are too small, and there are too many packages
-in the entire archive, to create individual torrents for each one.
-However, all the packages together are too large to track
-efficiently as a single torrent. Some division of the archive's
+in the entire archive to create individual torrents for each one.
+On the other hand, all the packages together are too large to track
+efficiently as a single torrent. Hence, some division of the archive's
 packages into torrents is obviously necessary, but wherever that
 split occurs it will cause either some duplication of connections,
 or prevent some peers from connecting to others who do have the same
-content. Also, a small number of the packages can be updated every
+content. In addition, a small number of the packages can be updated every
 day which would add new files to the torrent, thereby changing its
 \emph{infohash} identifier and making it a new torrent. This will
 severely fracture the download population, even though peers in the
-new torrent share 99\% of the packages in common with peers in the
+new torrent may share 99\% of the packages in common with peers in the
 old torrent.
 
 Other issues also prevent BitTorrent from being a good solution to
-this problem. BitTorrent's fixed piece sizes that disregard file
+this problem. In particular, BitTorrent's fixed piece sizes (?KB) that disregard file
 boundaries are bigger than many of the packages in the archive. This
 will waste peers' downloading bandwidth as they will end up
 downloading parts of other packages just to get the piece that
-contains the package they do want. Incentives to share (upload) are
-no longer needed, as the software is freely available for anyone to
-download without sharing. Seeds are also not needed as the mirrors
-can serve in that capacity. Finally, BitTorrent downloads files
+contains the package they do want. 
+
+Finally, note that BitTorrent downloads files
 randomly, which does not work well with the interactive package
-management tools expectation of sequential downloads.
+management tools expectation of sequential downloads. On the other hand, with altruistic peers, incentives to share (upload) 
+become a less important issue, and the availability of seeds are not critical, either, as the mirror sites 
+can serve in that capacity.
 
-\subsection{Other Solutions}
-\label{others}
 
-There have also been other attempted implementations, usually based
-on some form of BitTorrent, to address this problem. Some other
-implementations have used BitTorrent almost unmodified, while others
-have only looked at using DHTs to replace the tracker in a
-BitTorrent system. apt-torrent \cite{apttorrent} creates torrents
-for some of the larger packages available, but it ignores the
-smaller packages, which are often the most popular. DebTorrent
-\cite{debtorrent} makes widespread modifications to a traditional
-BitTorrent client, to try and fix the drawbacks mentioned in section
-\ref{bittorrent}. However, these changes also require some
-modifications to the distribution system to support it.
-
-Others have also used DHTs to support this type of functionality.
-Kenosis \cite{kenosis} is a P2P Remote Procedure Call
-client also based on the Kademlia DHT, but it is meant as a P2P
-primitive system on which other tools can be built, and so it has no
-file sharing functionality at all. Many have used a DHT as a drop-in
-replacement for the tracker in a BitTorrent system
-\cite{bittorrent-dht, azureus-dht}, but such systems only use the
-DHT to find peers for the same torrent, so the file sharing uses
-traditional BitTorrent and so is not ideal for the reasons listed
-above.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Opportunity/Our Proposal}
+\section{Peer-to-Peer Assisted Distributor: An Overview}
 \label{opportunity}
 
 The situation described in section \ref{situation} presents a clear
@@ -474,7 +392,7 @@ the downloaded package.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Sample Implementation/Implementation}
+\section{\texttt{apt-p2p}: A Practical Implementation}
 \label{implementation}
 
 We have created a sample implementation that functions as described
@@ -731,7 +649,7 @@ affect its attempt to verify the downloaded file.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Analysis}
+\section{Performance Evaluation}
 \label{analysis}
 
 Our \texttt{apt-p2p} implementation supporting the Debian package
@@ -909,10 +827,50 @@ per second of bandwidth in servicing the DHT. These numbers are
 small enough to not affect any other network services the peer would
 be running.
 
+
+\section{Related Work}
+\label{others}
+
+There have also been preliminary attempts to implement peer-to-peer distributors for
+software packages. apt-torrent \cite{apttorrent} creates torrents
+for some of the larger packages available, but it ignores the
+smaller packages, which are often the most popular. DebTorrent
+\cite{debtorrent} makes widespread modifications to a traditional
+BitTorrent client, to try and fix the drawbacks mentioned in section
+\ref{bittorrent}. However, these changes also require some
+modifications to the distribution system to support it.
+
+Others have also used DHTs to support this type of functionality.
+Kenosis \cite{kenosis} is a P2P Remote Procedure Call
+client also based on the Kademlia DHT, but it is meant as a P2P
+primitive system on which other tools can be built, and so it has no
+file sharing functionality at all. Many have used a DHT as a drop-in
+replacement for the tracker in a BitTorrent system
+\cite{bittorrent-dht, azureus-dht}, but such systems only use the
+DHT to find peers for the same torrent, so the file sharing uses
+traditional BitTorrent and so is not ideal for the reasons listed
+above.
+
+Our solution differs from them in that ...
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Future Work}
-\label{future}
+\section{Conclusion and Future Work}
+\label{conclusions}
+
+We have designed a generally applicable peer-to-peer content
+distribution model to be used by many of the free software
+distributors operating today. It makes use of already existing
+features of most package management systems to create a
+peer-to-peer distribution that should substantially reduce the costs
+of hosting the software packages.
+
+We have also implemented our design in freely available software to
+be used in conjuction with Debian-based distribution of Linux
+software packages. It is currently in use by some users of the
+Debian project's distribution, and so serves as an example of the
+possibilities that exist.
 
 We feel that our P2P software package distribution model is
 well-suited to be used by many free software distributors. We hope
@@ -936,24 +894,6 @@ parameters of our current system, better exclusion of NATted peers
 from the routing tables, and through the use of STUN \cite{STUN} to
 circumvent the NATs of the 50\% of the peers that have not
 configured port forwarding.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%  Section  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Conclusions}
-\label{conclusions}
-
-We have designed a generally applicable peer-to-peer content
-distribution model to be used by many of the free software
-distributors operating today. It makes use of already existing
-features of most package management systems to create a
-peer-to-peer distribution that should substantially reduce the costs
-of hosting the software packages.
-
-We have also implemented our design in freely available software to
-be used in conjuction with Debian-based distribution of Linux
-software packages. It is currently in use by some users of the
-Debian project's distribution, and so serves as an example of the
-possibilities that exist.
 
 \bibliographystyle{IEEEtran}
 \bibliography{./IEEEabrv,./all}
