--- a/docs/paper/all.bib
+++ b/docs/paper/all.bib
@@ -239,6 +239,59 @@
 
 %%%%%%% BibSonomy References %%%%%%%%%
 
+@article{globule,
+  title={{Globule: a collaborative content delivery network}},
+  author={Pierre, G. and van Steen, M.},
+  journal={IEEE Communications Magazine},
+  volume={44},
+  number={8},
+  pages={127--133},
+  year={2006}
+}
+
+@inproceedings{shah08,
+	title = {A {P2P} Based Architecture for Secure Software Delivery Using Volunteer Assistance},
+	author = {P. Shah and J.-F. Pâris and J. Morgan and J. Schettino and C. Venkatraman},
+	booktitle = {P2P},
+	publisher = {IEEE},
+	year = {2008},
+	keywords = {apt-p2p }
+}
+
+% P. Shah, J.-F. Pâris, J. Morgan, J. Schettino and C. Venkatraman,
+% A P2P Based Architecture for Secure Software Delivery Using Volunteer Assistance,
+% Proceedings of the 8th International Conference on Peer-to-Peer Computing 2008 (P2P'08),
+% Aachen, Germany, Sept. 2008
+
+@inproceedings{coral,
+	title = {Democratizing Content Publication with {Coral}},
+	author = {Michael J. Freedman and Eric Freudenthal and David Mazières},
+	booktitle = {NSDI},
+	pages = {239-252},
+	publisher = {USENIX},
+	year = {2004},
+	keywords = {apt-p2p }
+}
+
+@inproceedings{shark,
+	title = {Shark: Scaling File Servers via Cooperative Caching},
+	author = {Siddhartha Annapureddy and Michael J. Freedman and David Mazières},
+	booktitle = {NSDI},
+	publisher = {USENIX},
+	year = {2005},
+	keywords = {apt-p2p }
+}
+
+@inproceedings{deltacast,
+	title = {{DeltaCast}: efficient file reconciliation in wireless broadcast systems},
+	author = {Julian Chesterfield and Pablo Rodriguez},
+	booktitle = {MobiSys},
+	pages = {93-106},
+	publisher = {ACM},
+	year = {2005},
+	keywords = {apt-p2p }
+}
+
 @techreport{saroiu2001,
 	title={{A measurement study of peer-to-peer file sharing systems}},
 	author={Saroiu, S. and Gummadi, P.K. and Gribble, S.D. and others},
@@ -251,7 +304,7 @@
 @article{kademlia,
 	title = {{Kademlia: A Peer-to-Peer Information System Based on the XOR Metric}},
 	author = {P. Maymounkov and D. Mazieres},
-	journal = {Peer-To-Peer Systems: First International Workshop, IPTPS 2002, Cambridge, MA, USA, March 7-8, 2002},
+	journal = {Peer-To-Peer Systems: First International Workshop, IPTPS 2002, Cambridge, MA, USA, March 7-8},
 	publisher = {Springer},
 	year = 2002,
 	entrytype = {article},
